--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
   "license": "UNLICENSED",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "crypto": "0.0.3",
     "express": "^4.15.3",
     "jsonwebtoken": "^7.4.1",
     "lodash": "^4.17.4",
     "mongo": "^0.1.0",
-    "mongoose": "^4.10.6"
+    "mongoose": "^4.10.6",
+    "request": "^2.81.0",
+    "utf8": "^2.1.2"
   }
 }
