--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.17.2",
     "crypto": "0.0.3",
     "ejs": "^2.5.7",
+    "element-ui": "^1.4.2",
     "express": "^4.15.3",
     "jsonwebtoken": "^7.4.1",
     "less": "^2.7.2",
@@ -24,6 +25,7 @@
     "mongoose": "^4.10.6",
     "path": "^0.12.7",
     "request": "^2.81.0",
-    "utf8": "^2.1.2"
+    "utf8": "^2.1.2",
+    "vue": "^2.4.2"
   }
 }
