--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "test.js",
-    "start": "node ./index.js"
+    "start": "node --max_old_space_size=4096 --optimize_for_size --max_executable_size=4096 --stack_size=4096 .\\index.js"
   },
   "keywords": [
     "agiview"
